--- a/src/webparts/timeplan/components/create-meeting/create-appointment/CreateAppointment.module.scss
+++ b/src/webparts/timeplan/components/create-meeting/create-appointment/CreateAppointment.module.scss
@@ -3,7 +3,7 @@
 .createAppointment {
     .container {
         min-width: 700px;
-        margin: 0px auto;
+        margin: 5px 5px auto;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
       }
 
